deploy/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: postit-frontend
spec:
  host: postit-dev.apps.cluster-bxnhf.dyn.redhatworkshops.io
  to:
    kind: Service
    name: postit-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
